FIX: URS-351 search results pagination bar overflow

--- a/app/assets/stylesheets/ursus/_old_collections_link.scss
+++ b/app/assets/stylesheets/ursus/_old_collections_link.scss
@@ -1,3 +1,9 @@
 .old-collections-link {
   margin-top: 1em;
+  a {
+    color: $ucla-blue;
+  }
+  a:hover {
+    color: $ucla-darker-blue;
+  }
 }
